--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+    
+    overflow-x: hidden;
+}
+
+
+
+body{
+    margin: 0 auto; 
+    background: url("images/background.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    overflow-x: hidden;
+    
+    overflow-y: hidden;
+}
+
+
+
